# defpkg

./: .gitignore  LICENSE  README.md  defpkg.py  pyproject.toml
defpkg/: __init__.py
